--- a/KosmoForumClient/KosmoForumClient.csproj
+++ b/KosmoForumClient/KosmoForumClient.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>ff79e34a-a05b-421b-96e3-f25c96c19c0c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +11,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.1" />
     <PackageReference Include="toastr" Version="2.1.1" />
+    <PackageReference Include="X.PagedList" Version="8.0.7" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.0.7" />
+    <PackageReference Include="X.PagedList.Web.Common" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
